<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">智能管家</string>
    <string name="fragment_user">用户中心</string>
    <string name="fragment_girl">美女社区</string>
    <string name="fragment_wechat">聊天中心</string>
    <string name="fragment_news">社区中心</string>
    <string name="setting">设置</string>
    <string name="guide">引导页</string>
    <string name="pager_item_one">ONE</string>
    <string name="pager_item_two">TWO</string>
    <string name="pager_item_three">THREE</string>
    <string name="app_start">进入主页</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="remember_pwd">记住密码</string>
    <string name="age">年龄</string>
    <string name="desc">简介</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="password1">确认密码</string>
    <string name="email">邮箱</string>
    <string name="verify_email">注册成功需要前往邮箱验证，否则无法登陆！！！</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="alter_pwd">修改密码</string>
    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="new_pwd1">再次输入密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="logining">正在登陆</string>
    <string name="edit_info">编辑资料</string>
    <string name="gender">性别</string>
    <string name="sure_modify">确定修改</string>
    <string name="query_courier">物流查询</string>
    <string name="query_zone">归属地查询</string>
    <string name="logout">退出登录</string>
    <string name="view_not_empty">输入框不能为空</string>
    <string name="photo">拍照</string>
    <string name="map">图库</string>
    <string name="cancel">撤销</string>
    <string name="courier_company">快递公司</string>
    <string name="courier_number">快递单号</string>
    <string name="query_phone">归属地查询</string>
</resources>