<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/user_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age" />

    <EditText
        android:id="@+id/user_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc" />

    <RadioGroup
        android:layout_width="match_parent"
        android:id="@+id/user_sex"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/woman" />
    </RadioGroup>

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/user_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password1"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_email"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_registered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />


</LinearLayout>