<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alter_pwd"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/old_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_pwd" />

    <EditText
        android:id="@+id/new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_pwd" />

    <EditText
        android:id="@+id/new_pwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_pwd1" />

    <Button
        android:id="@+id/btn_alter_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        android:text="@string/alter_pwd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_pwd"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <Button
        android:id="@+id/btn_find_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/button_bg"
        android:text="@string/find_pwd" />

</LinearLayout>