<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password" />

    <LinearLayout
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:layout_width="wrap_content"
            android:id="@+id/keep_password"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/remember_pwd"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_login"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:hint="@string/login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_registered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/register"
        android:textColor="@android:color/white" />
    <LinearLayout
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/forget_pwd"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>


</LinearLayout>