<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_camera"
        android:background="@drawable/button_bg"
        android:text="@string/photo"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_picture"
        android:text="@string/map"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_bg"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:text="@string/cancel"
        android:background="@drawable/button_bg"
        android:layout_height="wrap_content" />
</LinearLayout>