<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/courier_company"
        android:text="sf" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/courier_number"
        android:text="153554424049" />

    <Button
        android:id="@+id/btn_get_courier"
        android:textColor="@android:color/white"
        android:text="@string/query_courier"
        android:layout_width="match_parent"
        android:background="@drawable/button_bg"
        android:layout_height="wrap_content" />

    <ListView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:id="@+id/mListView"
        android:layout_height="0dp"/>

</LinearLayout>